2016.1.0 [2016-06-xx]
- Major performance improvements and simplifications of the XDMF IO.
- Remove Zoltan graph partitioning interface
- Add new algorithm for computing mesh entiites. Typical speed-up
	of two with gcc and four with clang. Reduced memory usage for
	meshes with irregularly numbered cells.
- Remove STLMatrix, STLVector, MUMPSLUSolver and PastixLUSolver classes
- Remove PETScPreconditioner::set_near_nullspace and add
	PETScMatrix::set_near_nullspace
- Build system updates for VTK 7.0
- Remove XDMF from File interface. XDMF is XML based, and has many
	possibilities for file access, which are not accessible through
	the limited File interface and "<<" ">>" operators. Instead of
	File, use XDMFFile, and use XDMFFile.read() and XDMFFile.write()
	for I/O. Demos and tests have been updated to show usage.  XDMF
	now also supports ASCII I/O in serial, useful for compatibility
	with users who do not have the HDF5 library available.
- Require polynomial degree or finite element for Expressions in
	the Python interface (fixes Issue #355,
	https://bitbucket.org/fenics-project/dolfin/issues/355)
- Switch to Google Test framwork for C++ unit tests
- Fix bug when reading domain data from mesh file for a ghosted mesh
- Add interface for manipulating mesh geometry using (higher-order) FE
	functions: free functions set_coordinates, get_coordinates, create_mesh
- Fix bug when reading domain data from mesh file for a ghosted mesh.
- Remove reference versions of constructors for many classes that
	store a pointer/reference to the object passed to the
	constructor. This is an intrusive interface change for C++ users,
	but necessary to improve code maintainabilty and to improve memory
	safety. The Python interface is (virtually) unaffected.
- Remove class SubSpace. Using FunctionSpace::sub(...) instead
- Remove reference versions constructors of NonlinearVariationalSolver
- Remove setting of bounds from NonlinearVariationalSolver (was